test/libsolidity/syntaxTests/errors/using_structs.sol
struct S {uint a;}
contract C {
    error MyError(S);
    error MyError2(S t);
}
// ----
